--- a/scss/partials/common/_cards.scss
+++ b/scss/partials/common/_cards.scss
@@ -2,6 +2,5 @@
 .cards-container {
   display: block;
   height: 50px;
-  width: 100vw;
   background-color: $primary;
 }
